# Pseudo3D-Game

./: CMakeLists.txt  Connect.txt  main.cpp
Implementation/: Camera.cpp  Camera.h  Circle2D.cpp  Circle2D.h  ClientUdp.cpp  ClientUdp.h  FlatObject.cpp  FlatObject.h  Idrawable.h  Menu.cpp  Menu.h  Object2D.cpp  Object2D.h  ObjectType.h  Player.cpp  Player.h  Point2D.cpp  Point2D.h  ResourceManager.cpp  ResourceManager.h  ServerUdp.cpp  ServerUdp.h  Settings.cpp  Settings.h  Sockets.cpp  Sockets.h  Square2D.h  Weapon.cpp  Weapon.h  World.cpp  World.h
